exports[`test Child nodes 1`] = `
<div
  className="pe-list     pe-list--padding   ">
  <ListTile
    subtitle="Starting post doc"
    title="Jennifer Barker" />
  <ListTile
    subtitle="Brunch this weekend?"
    title="Ali Connors" />
  <ListTile
    subtitle="Binge watching..."
    title="Grace VanDam" />
</div>
`;

exports[`test Dark tone class + light tone 1`] = `
<div
  className="pe-list   pe-list--header  pe-list--padding  pe-light-tone "
  style={
    Object {
      "background": "#fff",
    }
  }>
  <ListTile
    className="pe-list-tile--header "
    header={true}
    title="Friends" />
  <ListTile
    hoverable={true}
    subtitle="Starting post doc"
    title="Jennifer Barker" />
  <ListTile
    hoverable={true}
    subtitle="Brunch this weekend?"
    title="Ali Connors" />
  <ListTile
    hoverable={true}
    subtitle="Binge watching..."
    title="Grace VanDam" />
</div>
`;

exports[`test Dark tone class + light tone class 1`] = `
<div
  className="pe-list   pe-list--header  pe-list--padding   pe-light-tone"
  style={
    Object {
      "background": "#fff",
    }
  }>
  <ListTile
    className="pe-list-tile--header "
    header={true}
    title="Friends" />
  <ListTile
    hoverable={true}
    subtitle="Starting post doc"
    title="Jennifer Barker" />
  <ListTile
    hoverable={true}
    subtitle="Brunch this weekend?"
    title="Ali Connors" />
  <ListTile
    hoverable={true}
    subtitle="Binge watching..."
    title="Grace VanDam" />
</div>
`;

exports[`test Keyboard control: click to select, then use the arrow keys (Escape to deselect) 1`] = `
<div
  onKeyDown={[Function]}>
  <List
    borders={true}
    tiles={
      Array [
        <ListTile
          className=""
          events={
              Object {
                  "onClick": null,
                }
          }
          header={true}
          hoverable={false}
          selected={false}
          title="A" />,
        <ListTile
          className="tests-list-keyboard-list-tile"
          events={
              Object {
                  "onClick": [Function],
                }
          }
          hoverable={true}
          selected={false}
          title="Amman" />,
        <ListTile
          className="tests-list-keyboard-list-tile"
          events={
              Object {
                  "onClick": [Function],
                }
          }
          hoverable={true}
          selected={false}
          title="Amsterdam" />,
        <ListTile
          className="tests-list-keyboard-list-tile"
          events={
              Object {
                  "onClick": [Function],
                }
          }
          hoverable={true}
          selected={false}
          title="Athens" />,
        <ListTile
          className=""
          events={
              Object {
                  "onClick": null,
                }
          }
          header={true}
          hoverable={false}
          selected={false}
          title="B" />,
        <ListTile
          className="tests-list-keyboard-list-tile"
          events={
              Object {
                  "onClick": [Function],
                }
          }
          hoverable={true}
          selected={false}
          title="Bangkok" />,
        <ListTile
          className="tests-list-keyboard-list-tile"
          events={
              Object {
                  "onClick": [Function],
                }
          }
          hoverable={true}
          selected={false}
          title="Beijing" />,
        <ListTile
          className="tests-list-keyboard-list-tile"
          events={
              Object {
                  "onClick": [Function],
                }
          }
          hoverable={true}
          selected={false}
          title="Brussels" />,
        <ListTile
          className=""
          events={
              Object {
                  "onClick": null,
                }
          }
          header={true}
          hoverable={false}
          selected={false}
          title="C" />,
        <ListTile
          className="tests-list-keyboard-list-tile"
          events={
              Object {
                  "onClick": [Function],
                }
          }
          hoverable={true}
          selected={false}
          title="Canberra" />,
        <ListTile
          className="tests-list-keyboard-list-tile"
          events={
              Object {
                  "onClick": [Function],
                }
          }
          hoverable={true}
          selected={false}
          title="Cardiff" />,
        <ListTile
          className="tests-list-keyboard-list-tile"
          events={
              Object {
                  "onClick": [Function],
                }
          }
          hoverable={true}
          selected={false}
          title="Copenhagen" />,
      ]
    } />
</div>
`;

exports[`test No list padding 1`] = `
<div
  className="pe-list        ">
  <ListTile
    front={
      <Icon
        avatar={true}
        size="large"
        src="http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png" />
    }
    subtitle="Starting post doc"
    title="Jennifer Barker" />
  <ListTile
    front={
      <Icon
        avatar={true}
        size="large"
        src="http://arthurclemens.github.io/assets/polythene/examples/avatar-2.png" />
    }
    subtitle="Brunch this weekend?"
    title="Ali Connors" />
  <ListTile
    front={
      <Icon
        avatar={true}
        size="large"
        src="http://arthurclemens.github.io/assets/polythene/examples/avatar-3.png" />
    }
    subtitle="Binge watching..."
    title="Grace VanDam" />
</div>
`;

exports[`test No options 1`] = `
<div
  className="pe-list     pe-list--padding   " />
`;

exports[`test Option: class -- dark tone class 1`] = `
<div
  className="pe-list   pe-list--header  pe-list--padding   ">
  <ListTile
    className="pe-list-tile--header "
    header={true}
    title="Friends" />
  <ListTile
    hoverable={true}
    subtitle="Starting post doc"
    title="Jennifer Barker" />
  <ListTile
    hoverable={true}
    subtitle="Brunch this weekend?"
    title="Ali Connors" />
  <ListTile
    hoverable={true}
    subtitle="Binge watching..."
    title="Grace VanDam" />
</div>
`;

exports[`test Option: class 1`] = `
<div
  className="pe-list     pe-list--padding   class-x" />
`;

exports[`test Option: className 1`] = `
<div
  className="pe-list     pe-list--padding   className-x" />
`;

exports[`test Option: compact 1`] = `
<div
  className="pe-list   pe-list--header pe-list--compact pe-list--padding   ">
  <ListTile
    className="pe-list-tile--header "
    header={true}
    title="Friends" />
  <ListTile
    front={
      <Icon
        avatar={true}
        size="large"
        src="http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png" />
    }
    subtitle="Starting post doc"
    title="Jennifer Barker" />
  <ListTile
    front={
      <Icon
        avatar={true}
        size="large"
        src="http://arthurclemens.github.io/assets/polythene/examples/avatar-2.png" />
    }
    subtitle="Brunch this weekend?"
    title="Ali Connors" />
  <ListTile
    front={
      <Icon
        avatar={true}
        size="large"
        src="http://arthurclemens.github.io/assets/polythene/examples/avatar-3.png" />
    }
    subtitle="Binge watching..."
    title="Grace VanDam" />
</div>
`;

exports[`test Option: element 1`] = `
<a
  className="pe-list     pe-list--padding   " />
`;

exports[`test Option: id 1`] = `
<div
  className="pe-list     pe-list--padding   "
  id="id-x" />
`;

exports[`test Option: navigation 1`] = `<_class />`;

exports[`test Option: style (colors) 1`] = `
<div
  className="pe-list   pe-list--header  pe-list--padding   "
  style={
    Object {
      "backgroundColor": "#EF6C00",
      "color": "#fff",
    }
  }>
  <ListTile
    className="pe-list-tile--header "
    header={true}
    style={
      Object {
        "color": "rgba(255,255,255,.8)",
      }
    }
    title="Friends" />
  <ListTile
    style={
      Object {
        "color": "#fff",
      }
    }
    title="One" />
  <ListTile
    style={
      Object {
        "color": "#fff",
      }
    }
    title="Two" />
  <ListTile
    style={
      Object {
        "color": "#fff",
      }
    }
    title="Three" />
</div>
`;

exports[`test Option: tiles 1`] = `
<div
  className="pe-list     pe-list--padding   ">
  <ListTile
    subtitle="Starting post doc"
    title="Jennifer Barker" />
  <ListTile
    subtitle="Brunch this weekend?"
    title="Ali Connors" />
  <ListTile
    subtitle="Binge watching..."
    title="Grace VanDam" />
</div>
`;

exports[`test Options: header, tiles with urls 1`] = `
<div>
  <List
    borders={true}
    header={
      Object {
        "title": "Friends",
      }
    }
    tiles={
      Array [
        <withRouter() />,
        <withRouter() />,
        <withRouter() />,
      ]
    } />
  <List
    borders={true}
    header={
      Object {
        "title": "Friends",
      }
    }
    tiles={
      Array [
        <withRouter() />,
        <withRouter() />,
        <withRouter() />,
      ]
    } />
</div>
`;

exports[`test Options: header, tiles, indent, indentedBorders (JSX) 1`] = `
<List
  header={
    Object {
      "indent": true,
      "title": "Friends",
    }
  }
  indentedBorders={true}>
  <ListTile
    front={
      <Icon
        avatar={true}
        size="large"
        src="http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png" />
    }
    indent={true}
    subtitle="Starting post doc"
    title="Jennifer Barker" />
  <ListTile
    front={
      <Icon
        avatar={true}
        size="large"
        src="http://arthurclemens.github.io/assets/polythene/examples/avatar-2.png" />
    }
    indent={true}
    subtitle="Brunch this weekend?"
    title="Ali Connors" />
  <ListTile
    front={
      <Icon
        avatar={true}
        size="large"
        src="http://arthurclemens.github.io/assets/polythene/examples/avatar-3.png" />
    }
    indent={true}
    subtitle="Binge watching..."
    title="Grace VanDam" />
</List>
`;

exports[`test Options: header, tiles, indent, indentedBorders 1`] = `
<div
  className="pe-list  pe-list--indented-borders pe-list--header  pe-list--padding   ">
  <ListTile
    className="pe-list-tile--header "
    header={true}
    indent={true}
    title="Friends" />
  <ListTile
    indent={true}
    subtitle="Starting post doc"
    title="Jennifer Barker" />
  <ListTile
    indent={true}
    subtitle="Brunch this weekend?"
    title="Ali Connors" />
  <ListTile
    indent={true}
    subtitle="Binge watching..."
    title="Grace VanDam" />
</div>
`;

exports[`test Themed list (colors and padding) -- dark tone class 1`] = `
<div
  className="pe-list     pe-list--padding   tests-lists-themed-list">
  <ListTile
    className="tests-lists-themed-list-tile"
    subtitle="Starting post doc"
    title="Jennifer Barker" />
  <ListTile
    className="tests-lists-themed-list-tile"
    subtitle="Brunch this weekend?"
    title="Ali Connors" />
  <ListTile
    className="tests-lists-themed-list-tile"
    subtitle="Binge watching..."
    title="Grace VanDam" />
</div>
`;

exports[`test Themed list (colors and padding) 1`] = `
<div
  className="pe-list     pe-list--padding   tests-lists-themed-list">
  <ListTile
    className="tests-lists-themed-list-tile"
    subtitle="Starting post doc"
    title="Jennifer Barker" />
  <ListTile
    className="tests-lists-themed-list-tile"
    subtitle="Brunch this weekend?"
    title="Ali Connors" />
  <ListTile
    className="tests-lists-themed-list-tile"
    subtitle="Binge watching..."
    title="Grace VanDam" />
</div>
`;
